--- a/module1/_posts/2000-01-02-reading.markdown
+++ b/module1/_posts/2000-01-02-reading.markdown
@@ -2,10 +2,10 @@
 title: Reading
 layout: course_page
 ---
-# Readings
+## Readings
 
 This week's readings are about the objects that are always with you--that made you who you are.
 
-## Essay: Sherry Turkle & Paul Auster
-- http://courses.ischool.berkeley.edu/i290-2/s08/readings/Turkle_Evocative_Objects.pdf Sherry Turkle
-- https://www.dropbox.com/s/a458ehyq0j33snc/Whats%20Your%20Pencil.pdf
+### Essay: Sherry Turkle & Paul Auster
+- [Evocative Objects](http://courses.ischool.berkeley.edu/i290-2/s08/readings/Turkle_Evocative_Objects.pdf) by Sherry Turkle
+- [Where's Your Pencil](https://www.dropbox.com/s/a458ehyq0j33snc/Whats%20Your%20Pencil.pdf) by Paul Auster
