--- a/module2/_posts/2000-01-02-reading.markdown
+++ b/module2/_posts/2000-01-02-reading.markdown
@@ -11,4 +11,4 @@ Herb Kohl demonstrates how the world is the best classroom and how not-learning 
 Peter Elbow explains the use of writing as a tool for thinking and growing ideas.
 
 - [Peter Elbow's Writing Without Teachers](http://nzr.mvnu.edu/faculty/trearick/english/rearick/exposwrt/Elbow%20Learning%20Without%20Writing%20Teachers.pdf)
-- Herb Kohl
+- [Herb Kohl's "I Won't Learn From You" & "Open Classroom"](https://drive.google.com/folderview?id=0B5tWnajPyvXDMmo5V1ZtTnJRRVU&usp=sharing)
