--- a/module4/_posts/2000-01-02-reading.markdown
+++ b/module4/_posts/2000-01-02-reading.markdown
@@ -1,6 +1,17 @@
 ---
 title: Reading
 layout: course_page
+published: true
 ---
-# Reading
-We'll post future modules further in the course
+
+# Readings in Stellar Feedback
+
+1. Liz Lerman, [The Critical Response Process](http://www.lizlerman.com/crpLL.html)
+2. Donald Schön ["The Reflective Practitioner"](http://infed.org/mobi/donald-schon-learning-reflection-change/)
+3. [Whole Systems Thinking](http://www.csh.umn.edu/wsh/prod/groups/ahc/@pub/@ahc/@csh/@wsh/documents/content/ahc_content_199136.pdf)
+
+
+
+
+
+
