--- a/module4/_posts/2000-01-02-reading.markdown
+++ b/module4/_posts/2000-01-02-reading.markdown
@@ -6,7 +6,7 @@ published: true
 
 # Readings in Stellar Feedback
 
-1. Liz Lerman, [The Critical Response Process](http://www.lizlerman.com/crpLL.html)
+1. Liz Lerman, [The Critical Response Process](http://www.lizlerman.com/crpLL.html) and [Interview](http://www.morehshin.com/spring13x3danimation/wp-content/uploads/2012/12/LizLerman.pdf)
 2. Donald Schön ["The Reflective Practitioner"](http://infed.org/mobi/donald-schon-learning-reflection-change/)
 3. [Whole Systems Thinking](http://www.csh.umn.edu/wsh/prod/groups/ahc/@pub/@ahc/@csh/@wsh/documents/content/ahc_content_199136.pdf)
 
